// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> that renders a checkbox should render checkbox with complex children 1`] = `
<Checkbox
  id="c1"
>
  <div>
    <input
      className="Checkbox__input"
      disabled={false}
      id="c1"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c1"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <span>
        Check this out 
        <span>
          something else
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should render default checkbox correctly 1`] = `
<Checkbox
  id="c1"
>
  <div>
    <input
      className="Checkbox__input"
      disabled={false}
      id="c1"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c1"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <polyline
            points="1.5 6 3.5 9 8 3"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
      >
        <span
          className="Checkbox__text"
        >
          Check this out
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox> that renders a checkbox should rendered indeterminate checkbox correctly 1`] = `
<Checkbox
  asFlexbox={false}
  disabled={false}
  id="c4"
  indeterminate={true}
>
  <div>
    <input
      className="Checkbox__input Checkbox__input--indeterminate"
      disabled={false}
      id="c4"
      type="checkbox"
    />
    <label
      className="Checkbox__label"
      htmlFor="c4"
    >
      <span
        className="Checkbox__box"
      >
        <svg
          className="Checkbox__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <line
            x1="2"
            x2="8"
            y1="6"
            y2="6"
          />
        </svg>
      </span>
      <Text
        className="Checkbox__text"
        context="default"
        inline={true}
        size="normal"
      >
        <span
          className="Checkbox__text"
        >
          Useless checkbox
        </span>
      </Text>
    </label>
  </div>
</Checkbox>
`;
